# YOLO-FIreGuard-CPP

./: .gitignore  CMakeLists.txt  README.md
include/: Detector.hpp
src/: Detector.cpp  main.cpp
